# nutriloop-ai

./: .env.example  .gitignore  AGENT_CONTEXT.md  Dockerfile  README.md  batch_sql.txt  demo.html  pyproject.toml  requirements.txt
.github/workflows/: retrain.yml
app/: __init__.py  cold_start.py  main.py  news_adjuster.py  predict.py  restaurant_metadata.py  schemas.py
models/: last_retrain.txt
scripts/: __init__.py  retrain.py  seed_supabase.py  test_api.py
training/: __init__.py  load_kaggle_data.py  train_clusters.py  train_global.py  upload_models.py
